# caravela

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates-io.md
caravel/: Cargo.toml
caravel/src/: lib.rs
caravel/src/entity/: agent.rs
caravel/src/entity/agent/: behavior.rs
caravel/src/entity/service/: ams.rs
caravela/: Cargo.toml
caravela/src/: deck.rs  entity.rs  lib.rs  platform.rs  utils.rs
caravela/src/entity/: agent.rs  messaging.rs  service.rs
caravela/src/entity/agent/: behavior.rs
caravela/src/entity/service/: ams.rs  organization.rs
caravela/src/platform/: environment.rs
examples/kalman/: Cargo.toml
examples/kalman/scripts/: generate_data.py  plot_data.py  q_plot.py
examples/kalman/src/: imu_data.rs  kalman.rs  kalman_agents.rs  kalman_threads.rs  main.rs
examples/kalman/src/kalman/: kalman_types.rs
examples/kalman/src/kalman_agents/: corrector.rs  logger.rs  predictor.rs  sensor.rs
examples/kalman/src/kalman_threads/: correct.rs  log.rs  predict.rs  sense.rs
examples/sender-receiver/: Cargo.toml
examples/sender-receiver/src/: main.rs
src/: deck.rs  entity.rs  lib.rs  platform.rs
src/entity/: agent.rs  service.rs
src/entity/agent/: behavior.rs  organization.rs
src/platform/: agent.rs  agents.rs  deck.rs  entity.rs  message.rs  organization.rs  service.rs
src/platform/agent/: base.rs  behavior.rs  organization.rs
src/platform/agents/: base.rs  behavior.rs  organization.rs
src/platform/entity/: dispatcher.rs  messaging.rs
src/platform/service/: ams.rs
tests/: Cargo.toml
tests/src/: lib.rs
