[workspace]

resolver = "2"

members = [
    "caravela",
    "examples/*",
    #    "caravel_derive",
    "tests",
]

[patch.crates-io]
libc = { git = "https://github.com/DRoMarin/libc.git", branch = "vxworks/sched" }
thread-priority = { git = "https://github.com/DRoMarin/thread-priority.git", branch = "vxworks-support" }
