[package]
name = "caravela"
version = "0.1.0"
edition = "2021"
description = "A MAS based applications framework"
repository = "https://github.com/DRoMarin/caravela"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["src/entity/service/organization.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-priority = "1.1.0"
#scheduler = "0.1.3"

[features]
dbg-probe = []
dbg-status = []
dbg-messaging = []
dbg-default = []
dbg-all = ["dbg-probe", "dbg-status", "dbg-messaging", "dbg-default"]
