[package]
name = "kalman"
version = "0.1.0"
edition = "2021"

[dependencies]
thread-priority = "1.0.0"
nalgebra = { version = "*", features = ["serde-serialize"] }
csv = "*"

caravela = { path = "../../caravela", features = [] }
serde_json = "1.0.132"
serde = "1.0.214"

[features]
agents = []
threads = []
